# microhappiness

./: .gitignore  METHODOLOGY.md  METHODOLOGY_TODO.md  README.md  pyproject.toml  requirements.txt
data/: diagnostics_results.md  research_brief.md  variable_catalog.md
data/national/: aggregation_spec.json  happiness_zcta.csv
diagnostics/: build_panel.py  full_screen.py  make_visuals.py  step0_variance_ceiling.py  step1_screen.py  step2_compare.py  temporal_check.py
microhappiness/: __init__.py  acs.py  binning.py  calibrate.py  crosswalk.py  estimate.py  gss.py  models.py  places.py  poststratify.py  publish.py  run.py  temporal.py  validate.py
